Make sure cards don't shift on hover and reduce zoom effect

--- a/styles.css
+++ b/styles.css
@@ -1718,7 +1718,7 @@ text-decoration: underline;
 }
 
 .c-accordion__card-image-container:hover .c-accordion__card-image {
-        transform: scale(1.1); /* Increase the size of the image */
+        transform: scale(1.05); /* Increase the size of the image */
     }
 
 .c-accordion__card {
@@ -1729,6 +1729,7 @@ text-decoration: underline;
 
 .c-accordion__card-image-container {
     border-radius: 8px;
+    border: 1px solid transparent;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
 }
